--- a/universal-debug-from-log-file.css
+++ b/universal-debug-from-log-file.css
@@ -24,6 +24,7 @@
     line-height: 18px;
     padding: 2px 0;
     margin: 0;
+    font-size: 12px;
 }
 #uniDebugContainer .result .block .head {
     font-weight: bold;
@@ -53,9 +54,12 @@
     color: #000;
     font-family: Arial;
     font-weight: normal;
+    font-size: 11px;
     border-bottom: 1px solid #ccc;
     padding: 2px 0 2px 10px;
     margin: 0;
+    width: 100%;
+    height: auto;
 }
 #uniDebugContainer .result .block .line:first-child {
     padding-top: 6px;
